themes/HumHub/css/theme.css
/* ... */
.content_create .upload-buttons,
.content_edit .upload-buttons {
  white-space: nowrap;
  padding-top: 6px;
}
.content_create .upload-buttons .btn:not(.dropdown-toggle),
.content_edit .upload-buttons .btn:not(.dropdown-toggle) {
  margin-left: 6px;
}
.content_create .upload-buttons .btn.fileinput-button,
.content_edit .upload-buttons .btn.fileinput-button,
.content_create .upload-buttons .fileinput-button + .dropdown-toggle,
.content_edit .upload-buttons .fileinput-button + .dropdown-toggle {
  background: #e7e7e7;
  color: #4b4b4b !important;
}
.content_create .upload-buttons .btn.fileinput-button:hover,
.content_edit .upload-buttons .btn.fileinput-button:hover,
.content_create .upload-buttons .fileinput-button + .dropdown-toggle:hover,
.content_edit .upload-buttons .fileinput-button + .dropdown-toggle:hover,
.content_create .upload-buttons .btn.fileinput-button:focus,
.content_edit .upload-buttons .btn.fileinput-button:focus,
.content_create .upload-buttons .fileinput-button + .dropdown-toggle:focus,
.content_edit .upload-buttons .fileinput-button + .dropdown-toggle:focus {
  background: #dedede !important;
  border-color: #dedede;
}
.content_create .upload-buttons .btn.fileinput-button:active,
.content_edit .upload-buttons .btn.fileinput-button:active,
.content_create .upload-buttons .fileinput-button + .dropdown-toggle:active,
.content_edit .upload-buttons .fileinput-button + .dropdown-toggle:active,
.content_create .upload-buttons .btn.fileinput-button.active,
.content_edit .upload-buttons .btn.fileinput-button.active,
.content_create .upload-buttons .fileinput-button + .dropdown-toggle.active,
.content_edit .upload-buttons .fileinput-button + .dropdown-toggle.active {
  background: #cacaca !important;
  border-color: #cacaca;
}
.content_create .upload-buttons .btn.dropdown-toggle,
.content_edit .upload-buttons .btn.dropdown-toggle {
  margin-left: 0;
}
.content_create .has-error + .upload-buttons,
.content_edit .has-error + .upload-buttons {
  padding-bottom: 22px;
}
.content_create .fileinput-button:active,
.content_edit .fileinput-button:active {
  box-shadow: none !important;
}
#notification_overview_filter label {
  display: block;
}
.field-filterform-allfilter input[type=checkbox] {
  border-color: #ccc;
}
.field-filterform-allfilter input[type=checkbox]:checked {
  border-color: #e7e7e7;
  background: #e7e7e7;
}
.field-filterform-allfilter input[type=checkbox]:checked::after {
  color: #555;
}
.field-filterform-allfilter input[type=checkbox]:focus {
  border-color: #ccc !important;
}
#notification_overview_list .img-space {
  position: absolute;
  top: 25px;
  left: 25px;
}
#notification_overview_list .media {
  display: flex;
}
#notification_overview_list .media .media-left {
  margin-right: 16px;
}
#notification_overview_list .media .media-right {
  min-width: 24px;
}
#notification_overview_list li {
  border-left: none;
  background: none;
}
#notification_overview_list li:hover {
  border-left: none;
  background-color: #f9f9f9;
}
#notification_overview_list li.new time {
  color: #21A1B3;
}
*#notification_overview_list li:not(.new) .media-body,
#notification_overview_list li:not(.new) .media-body strong {
  color: #7a7a7a;
}
@media (max-width: 767px) {
  .notifications {
    position: inherit !important;
    float: left !important;
  }
  .notifications .dropdown-menu {
    width: 300px !important;
    margin-left: 0 !important;
  }
  .notifications .dropdown-menu .arrow {
    margin-left: -142px !important;
  }
}
.badge-space {
  margin-top: 6px;
}
.badge-space-chooser {
  padding: 3px 5px;
  margin-left: 1px;
}
.badge {
  padding: 3px 5px;
  border-radius: 2px;
  font-weight: normal;
  font-family: Arial, sans-serif;
  font-size: 10px !important;
  text-transform: uppercase;
  color: #fff;
  vertical-align: baseline;
  white-space: nowrap;
  text-shadow: none;
  background-color: #d7d7d7;
  line-height: 1;
}
.badge-new {
  display: inline-block;
  width: 14px;
  height: 14px;
  border-radius: 50%;
  background: #21A1B3;
}
.popover {
  border: 1px solid rgba(0, 0, 0, 0.15);
  border-radius: 4px;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
}
.popover .popover-title {
  background: none;
  border-bottom: none;
  color: #000;
  font-weight: 300;
  font-size: 16px;
  padding: 15px;
}
.popover .popover-content {
  font-size: 13px;
  padding: 5px 15px;
  color: #000;
}
.popover .popover-content a {
  color: #21A1B3;
}
.popover .popover-content img {
  max-width: 100%;
}
.popover .popover-navigation {
  padding: 15px;
}
.panel-profile .panel-profile-header .image-upload-container {
  width: 100%;
  height: 100%;
  overflow: hidden;
}
.panel-profile .panel-profile-header .image-upload-container #bannerfileupload {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
}
.panel-profile .panel-profile-header .img-profile-header-background {
  width: 100%;
  max-height: 192px;
}
@media print {
  .panel-profile {
    display: none;
  }
}
.list-group-item {
  padding: 6px 15px;
  border: none;
  border-width: 0 !important;
  border-left: 3px solid #fff !important;
  font-size: 12px;
  font-weight: 600;
}
.list-group-item i {
  font-size: 14px;
}
a.list-group-item .listGroupItemActiveOrFocus {
  z-index: 2;
  color: #000;
  background-color: #f9f9f9;
  border-left: 3px solid #21A1B3 !important;
}
a.list-group-item.active {
  z-index: 2;
  color: #000;
  background-color: #f9f9f9;
  border-left: 3px solid #21A1B3 !important;
}
a.list-group-item:hover,
a.list-group-item.active:hover,
a.list-group-item.active:focus {
  background: inherit;
  color: inherit;
  border-left: none !important;
}
@media (hover: hover) and (pointer: fine) {
  a.list-group-item:hover,
  a.list-group-item.active:hover,
  a.list-group-item.active:focus {
    z-index: 2;
    color: #000;
    background-color: #f9f9f9;
    border-left: 3px solid #21A1B3 !important;
  }
}
/* ... */

